Config file update

--- a/web.config
+++ b/web.config
@@ -27,7 +27,7 @@
       </profiles>
     </caching>
     <staticContent>
-      <mimeMap fileExtension=".woff2" mimeType="font/woff2" />
+      <!--<mimeMap fileExtension=".woff2" mimeType="font/woff2" />-->
     </staticContent>
 
     <httpCompression directory="%SystemDrive%\inetpub\temp\IIS Temporary Compressed Files">
